# MultibandReverb

./: .gitignore  CMakeLists.txt  README.md  mockup.psd
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/include/MultibandReverb/: AudioTransport.h  BandControls.h  PluginEditor.h  PluginProcessor.h  SpectrumAnalyzer.h
plugin/source/: BandControls.cpp  PluginEditor.cpp  PluginProcessor.cpp  SpectrumAnalyzer.cpp
